--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,14 +38,14 @@ nav ul {
 nav ul li {
     list-style: none;
     margin-top: 50px;
-    
+
 
 
 }
 
 nav li a {
     text-decoration: none;
-    
+
 }
 
 .nav-title {
@@ -63,7 +63,7 @@ nav li a {
     padding: 12px 36px;
     border: none;
     border-radius: 10px;
-    
+
 
 
 }
@@ -91,3 +91,30 @@ nav li a {
     margin-top: 37px;
     margin-bottom: 150px;
 }
+
+/* action section related styles */
+.action-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 140px 150px 115px 150px;
+    gap: 220px;
+}
+
+
+.action-title {
+    font-weight: bold;
+    font-size: 42px;
+    color: #252432;
+    margin-bottom: 20px;
+
+}
+
+.action-subtitle {
+    font-size: 24;
+    font-weight: normal;
+    color: rgba(37, 36, 50, 0.5);
+    max-width: 400px;
+    margin-bottom: 20px;
+}
+img{border-radius: 48px;}
