--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,12 +34,11 @@ body {
 
 
 }
-button:hover {background-color:burlywood;
+
+button:hover {
+    background-color: burlywood;
     cursor: pointer;
     color: black
-    
-    
-    
 }
 
 /* nav related styles */
@@ -133,7 +132,7 @@ nav li a {
     margin-bottom: 20px;
 }
 
- img {
+img {
     border-radius: 48px;
 }
 
@@ -145,6 +144,7 @@ nav li a {
     border-radius: 24px;
     padding: 50px 140px 50px 140px;
 }
+
 .users-title {
     font-weight: bold;
     font-size: 38px;
@@ -173,6 +173,7 @@ nav li a {
 .rating-section {
     margin: 0px 150px 135px;
 
+
 }
 
 .rating-main-title {
@@ -184,8 +185,11 @@ nav li a {
 
 .rating {
     display: flex;
+    justify-content: center;
     gap: 20px;
 }
+
+
 
 
 .rating-box {
@@ -196,7 +200,7 @@ nav li a {
 
 
 .stars {
-     margin-bottom: 24px;
+    margin-bottom: 24px;
 }
 
 .rating-title {
@@ -222,11 +226,13 @@ nav li a {
 .contact-section {
     display: flex;
     gap: 115px;
+
     align-items: center;
     justify-content: space-between;
     margin: 0px 150px 80px;
-    width: 1140px;
+    /* width: 1140px; */
 }
+
 .contact-title {
 
     font-weight: bold;
@@ -270,11 +276,11 @@ textarea {
 footer {
     background-color: #FFFFFF;
     padding: 105px 450px;
-    
-    
+
+
 }
 
-.footer-website-name{
+.footer-website-name {
     margin-bottom: 8px;
     font-size: 100px;
     text-align: center;
@@ -284,18 +290,18 @@ footer {
 
 .footer-subtitle {
     color: #8987A1;
-    margin-left:5px ;
-    margin-right:5px ;
+    margin-left: 5px;
+    margin-right: 5px;
     text-align: center;
     margin-bottom: 20px;
 }
 
-    
+
 footer ul {
     display: flex;
     justify-content: center;
     gap: 48px;
-    
+
 }
 
 footer ul li {
